@@ -19,4 +19,6 @@ except Exception as e:
 
 from elasticapm.base import *  # noqa E403
 from elasticapm.conf import *  # noqa E403
+from elasticapm.instrumentation.control import (instrument,  # noqa E403
+                                                uninstrument)
 from elasticapm.traces import *  # noqa E403
